# 3DPrinter

./: .gitignore  3DPrinter.code-workspace
MotherBoard/: Cargo.toml  README.md  code.gcode  deplay.bat  sphere_0.15mm_PLA_MK3S_1h0m.gcode  test.gcode
MotherBoard/.cargo/: config.toml
MotherBoard/src/: gcode_manager.rs  gcode_parser.rs  main.rs  network.rs  printer.rs
MotherBoard/src/gcode_manager/: gcode.rs  serial.rs
MotherBoard/src/network/: skeleton.html  webui.rs
MotherBoard/src/printer/: gcode.rs  serial.rs
MotherBoard/src/printer/gcode/: gcommands.rs  mcommands.rs
PID/: PID.ino  defines.h  motor.cpp  motor.h
PID/asservisement/: asservisement.ino
PID/testSerial/: testSerial.ino
PID/tests/encoder/: encoder.ino
