[package]
name = "mother_board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = {version = "4.2.0", default-features = false}
tokio = { version = "1.28.1", features = ["full"]}
axum = "0.6.18"
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git" }
dioxus-liveview = { git = "https://github.com/DioxusLabs/dioxus.git", features = ["axum"] }
